Optimize github build workflow

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -5,7 +5,7 @@ logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
 [program:mongodb]
-command=/usr/bin/mongod --dbpath /data/db --logpath /var/log/mongodb/mongodb.log
+command=/usr/bin/mongod --dbpath /data/db --logpath /var/log/mongodb/mongodb.log --bind_ip 0.0.0.0
 user=mongodb
 autostart=true
 autorestart=true
@@ -13,6 +13,7 @@ startsecs=10
 startretries=3
 stdout_logfile=/var/log/supervisor/mongodb.stdout.log
 stderr_logfile=/var/log/supervisor/mongodb.stderr.log
+priority=1
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
@@ -23,25 +24,31 @@ startsecs=5
 startretries=3
 stdout_logfile=/var/log/supervisor/nginx.stdout.log
 stderr_logfile=/var/log/supervisor/nginx.stderr.log
+priority=100
 
 [program:ssh-service]
 command=/usr/bin/node /app/src/backend/ssh.cjs
 user=node
 directory=/app
+environment=NODE_ENV="production",PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 autostart=true
 autorestart=true
 startsecs=10
 startretries=3
 stdout_logfile=/var/log/supervisor/ssh.stdout.log
 stderr_logfile=/var/log/supervisor/ssh.stderr.log
+priority=200
 
 [program:database-service]
 command=/usr/bin/node /app/src/backend/database.cjs
 user=node
 directory=/app
+environment=NODE_ENV="production",MONGO_URL="mongodb://localhost:27017/termix",PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 autostart=true
 autorestart=true
 startsecs=10
 startretries=3
 stdout_logfile=/var/log/supervisor/database.stdout.log
-stderr_logfile=/var/log/supervisor/database.stderr.log 
+stderr_logfile=/var/log/supervisor/database.stderr.log
+depends_on=mongodb
+priority=300 
