--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,7 +11,7 @@ RUN npm run build
 FROM node:18-alpine AS backend-builder
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci --only=production --force && \
+RUN npm ci --force && \
     npm cache clean --force
 COPY src/backend/ ./src/backend/
 
@@ -49,9 +49,12 @@ ENV DEBIAN_FRONTEND=noninteractive \
     MONGODB_LOG_DIR=/var/log/mongodb \
     PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 
-# Create users first
-RUN groupadd -r mongodb && useradd -r -g mongodb mongodb \
-    && groupadd -r node && useradd -r -g node -m node
+# Create users and set up directories first
+RUN groupadd -r mongodb && useradd -r -g mongodb mongodb && \
+    groupadd -r node && useradd -r -g node -m node && \
+    mkdir -p /data/db /var/log/mongodb /var/run/mongodb /tmp/mongodb && \
+    chown -R mongodb:mongodb /data/db /var/log/mongodb /var/run/mongodb /tmp/mongodb && \
+    chmod 755 /data/db /var/log/mongodb /var/run/mongodb /tmp/mongodb
 
 # Install all dependencies in one layer
 RUN rm -f /var/lib/apt/lists/lock /var/cache/apt/archives/lock /var/lib/dpkg/lock* && \
@@ -62,7 +65,8 @@ RUN rm -f /var/lib/apt/lists/lock /var/cache/apt/archives/lock /var/lib/dpkg/loc
         gnupg \
         gosu \
         nginx-light \
-        wget && \
+        wget \
+        curl && \
     wget -qO - https://www.mongodb.org/static/pgp/server-4.4.asc | apt-key add - && \
     echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/4.4 multiverse" | tee /etc/apt/sources.list.d/mongodb-org-4.4.list && \
     wget -qO- https://deb.nodesource.com/setup_${NODE_VERSION} | bash - && \
@@ -72,27 +76,28 @@ RUN rm -f /var/lib/apt/lists/lock /var/cache/apt/archives/lock /var/lib/dpkg/loc
         mongodb-org-server=${MONGO_VERSION} \
         mongodb-org-shell=${MONGO_VERSION} && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/* /var/cache/apt/* /tmp/* && \
-    mkdir -p /data/db /var/log/mongodb /var/run/mongodb && \
-    chown -R mongodb:mongodb /data/db /var/log/mongodb /var/run/mongodb && \
-    chmod 755 /data/db /var/log/mongodb /var/run/mongodb
+    rm -rf /var/lib/apt/lists/* /var/cache/apt/* /tmp/*
 
 # Setup nginx and frontend
 COPY docker/nginx.conf /etc/nginx/nginx.conf
 COPY --from=frontend-builder /app/dist /usr/share/nginx/html
-RUN chown -R www-data:www-data /usr/share/nginx/html
+RUN chown -R www-data:www-data /usr/share/nginx/html && \
+    mkdir -p /var/log/nginx && \
+    chown -R www-data:www-data /var/log/nginx && \
+    chmod 755 /var/log/nginx
 
 # Setup backend
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci --only=production --ignore-scripts --force && \
+RUN npm ci --only=production --force && \
     npm cache clean --force && \
     rm -rf /tmp/*
 COPY --from=bcrypt-builder /app/node_modules/bcrypt /app/node_modules/bcrypt
 COPY --from=backend-builder /app/src/backend ./src/backend
-RUN chown -R node:node /app
+RUN chown -R node:node /app && \
+    chmod -R 755 /app
 
-VOLUME ["/data/db"]
+VOLUME ["/data/db", "/var/log/mongodb"]
 EXPOSE 8080 8081 8082 27017
 
 COPY docker/entrypoint.sh /entrypoint.sh
