--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.21.2",
     "is-stream": "^4.0.1",
     "make-dir": "^5.0.0",
+    "mitt": "^3.0.1",
     "mongoose": "^8.12.1",
     "node-ssh": "^13.2.0",
     "prop-types": "^15.8.1",
