--- a/docker/nginx-https.conf
+++ b/docker/nginx-https.conf
@@ -19,16 +19,16 @@ http {
     # HTTP Server - Redirect to HTTPS
     server {
         listen ${PORT};
-        server_name localhost;
+        server_name _;
 
         # Redirect all HTTP traffic to HTTPS
-        return 301 https://$server_name:${SSL_PORT}$request_uri;
+        return 301 https://$host:${SSL_PORT}$request_uri;
     }
 
     # HTTPS Server
     server {
         listen ${SSL_PORT} ssl;
-        server_name localhost;
+        server_name _;
 
         # SSL Certificate paths
         ssl_certificate ${SSL_CERT_PATH};
