--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -172,12 +172,23 @@ http {
         }
 
         location /ssh/file_manager/ssh/ {
+            client_max_body_size 5G;
+            client_body_timeout 300s;
+            client_header_timeout 300s;
+            
             proxy_pass http://127.0.0.1:30004;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
+            
+            proxy_request_buffering off;
+            proxy_buffering off;
         }
 
         location /health {
