Fix docker build error and SSL regeneration

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,6 +9,7 @@ COPY package*.json ./
 ENV npm_config_target_platform=linux
 ENV npm_config_target_arch=x64
 ENV npm_config_target_libc=glibc
+ENV NODE_OPTIONS="--max-old-space-size=4096"
 
 RUN npm ci --force --ignore-scripts && \
     npm cache clean --force
@@ -19,7 +20,11 @@ WORKDIR /app
 
 COPY . .
 
+ENV NODE_OPTIONS="--max-old-space-size=4096"
+ENV NODE_ENV=production
+
 RUN npm run build
+RUN npm run build:types
 
 # Stage 3: Build backend TypeScript
 FROM deps AS backend-builder
@@ -30,6 +35,8 @@ COPY . .
 ENV npm_config_target_platform=linux
 ENV npm_config_target_arch=x64
 ENV npm_config_target_libc=glibc
+ENV NODE_OPTIONS="--max-old-space-size=4096"
+ENV NODE_ENV=production
 
 RUN npm rebuild better-sqlite3 --force
 
@@ -46,6 +53,7 @@ COPY package*.json ./
 ENV npm_config_target_platform=linux
 ENV npm_config_target_arch=x64
 ENV npm_config_target_libc=glibc
+ENV NODE_OPTIONS="--max-old-space-size=4096"
 
 RUN npm ci --only=production --ignore-scripts --force && \
     npm rebuild better-sqlite3 bcryptjs --force && \
