Fix docker build

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,7 +11,6 @@ ENV npm_config_target_arch=x64
 ENV npm_config_target_libc=glibc
 
 RUN npm ci --force --ignore-scripts && \
-    npm install @rollup/rollup-linux-x64-gnu @esbuild/linux-x64 @lightningcss/linux-x64-gnu --force && \
     npm cache clean --force
 
 # Stage 2: Build frontend
@@ -20,8 +19,7 @@ WORKDIR /app
 
 COPY . .
 
-RUN npm install @rollup/rollup-linux-x64-gnu @esbuild/linux-x64 @lightningcss/linux-x64-gnu --force && \
-    npm cache clean --force && \
+RUN npm cache clean --force && \
     npm run build
 
 # Stage 3: Build backend TypeScript
