Fix docker build

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,7 +10,8 @@ ENV npm_config_target_platform=linux
 ENV npm_config_target_arch=x64
 ENV npm_config_target_libc=glibc
 
-RUN npm ci --force --ignore-scripts && \
+RUN rm -rf node_modules package-lock.json && \
+    npm install --force && \
     npm cache clean --force
 
 # Stage 2: Build frontend
